Bug 411501 - Account wizard always shows busy indicator
Summary: Account wizard always shows busy indicator
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: wizards (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-01 15:25 UTC by Nicolas Fella
Modified: 2019-09-02 08:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (52.87 KB, image/png)
2019-09-01 15:25 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2019-09-01 15:25:11 UTC
Created attachment 122445 [details]
Screenshot

SUMMARY
When opening the mail account wizard (accountwizard --type message/rfc822) the busy indicator for the internet lookup is always shown, even when not actually looking up something.

It appears to be a regression from https://cgit.kde.org/libkdepim.git/commit/?id=54a914d18408f631d3911282ffd711fc05111d4d

Also the appearance is quite different than before

KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.13.0
Comment 1 Laurent Montel 2019-09-02 08:52:04 UTC
Git commit 16f77281b52ecb924e01d25a0ad9d00674e0665a by Laurent Montel.
Committed on 02/09/2019 at 08:51.
Pushed by mlaurent into branch 'master'.

Fix Bug 411501 - Account wizard always shows busy indicator

M  +1    -0    src/personaldatapage.cpp

https://commits.kde.org/kmail-account-wizard/16f77281b52ecb924e01d25a0ad9d00674e0665a