Fix Bug 411501 - Account wizard always shows busy indicator

BUG: 411501